Fixing register page login icon issue
Stop targeting generic css class name/reuse class name too much

--- a/styles/register.css
+++ b/styles/register.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&subset=greek-ext');
 
-.avatar {
+.register-imgcontainer .avatar {
     max-width: 5rem;
     height: 5rem;
 }
